--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
-group 'ch.securify'
+plugins {
+  id 'com.github.johnrengelman.shadow' version '4.0.4'
+  id 'java'
+}
 
-apply plugin: 'java'
 apply plugin: 'idea'
+/* apply plugin: 'java' */
+
+group 'ch.securify'
 
 def computeVersion() {
   if (System.env.SECURIFY_VERSION) {
@@ -46,6 +51,11 @@ task compileSouffle(type: Exec) {
 
 compileJava.dependsOn compileSouffle
 
+compileJava {
+    options.debug = true
+    options.debugOptions.debugLevel = "source,vars,lines"
+}
+
 repositories {
     mavenCentral()
 }
@@ -56,5 +66,12 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-csv
     compile group: 'org.apache.commons', name: 'commons-csv', version: '1.4'
+
+    // Log4j2 dependencies
+    compile 'org.slf4j:slf4j-api:1.7.25'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
+    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.1'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
