--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,10 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-csv
-    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.4'
+    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
+    // https://mvnrepository.com/artifact/commons-codec/commons-codec
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
+
 
     // Log4j2 dependencies
     compile 'org.slf4j:slf4j-api:1.7.25'
